# Excel-File-Compare-App

./: comparison.xlsx  file_compare_app.py  files_compare.py  readme.md  requires.txt  setup.cfg  truth_table2.xlsx  truth_tables1.xlsx
