# This will act as the configuration file for the project.

[metadata]
name = Excel_Compare_App
description = "Compare two excel files"
version = "0.1"
authors = "Lazarus Mtake"
license = "MIT"

[options]
install_requires = 
    setuptools >= 57.0.0
    pandas >= 0.23.0
    numpy >= 1.15.0
    pyinstaller >= 3.4

python_requires >= 3.7

# [options.extras_require]
# testing =
#     pytest
#     pytest-cov
#     pytest-mock
#     flake8
#     black

# [test]
# extras = True

# [tool:pytest]
# adopts = 
#     -- verbose
#     -- ignore=setup.py

# testpaths = tests

# [flake8]
# exclude = 
#     .git
#     .venv

# max-line-length = 80
# ignore = E201, E203, E231, E241, E266, E501, W291,W293, W503

# logging configuration
[loggers]
keys = root

[handlers]
keys=Screen, File

[formatters]
keys=LogFormatter

[logger_root]
level=NOTSET
handlers=Screen, File

[handlers_Screen]
class=StreamHandler
level=DEBUG
formatter=LogFormatter
args=(sys.stdout,)

[handlers_File]
class=handlers.FileHandler
formatter=LogFormatter
level=DEBUG
args=("logs/log_file.log",)

[formatters_LogFormatter]
format=F1 %%(asctime)s - %%(levelname)s : %%(message)s